@@ -14,23 +14,6 @@ java {
     }
 }
 
-//java {
-//    sourceCompatibility = JavaVersion.VERSION_21
-//    targetCompatibility = JavaVersion.VERSION_21
-//}
-//
-//tasks.withType(JavaCompile).configureEach {
-//    options.compilerArgs += ['--enable-preview']
-//}
-//
-//tasks.withType(Test).configureEach {
-//    jvmArgs += ['--enable-preview']
-//}
-//
-//bootRun {
-//    jvmArgs = ['--enable-preview']
-//}
-
 repositories {
     mavenCentral()
 }
@@ -57,6 +40,7 @@ dependencies {
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.15.3'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    implementation 'org.springframework:spring-webmvc:7.0.6'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
 }
